--- a/paginas/minijuegos/Flappy-Bird/css/flappycs.css
+++ b/paginas/minijuegos/Flappy-Bird/css/flappycs.css
@@ -1,58 +1,60 @@
-*{
+* {
   font-size: 100px;
-  margin:0;
-  padding:0; /*establecer limites de pantalla*/ 
-  
-}
-#fondo{
-  width:3000px;
-  height:1680px;
-  background-repeat: no-repeat;
-  background-image: url("../img/fondo.png");
+  margin: 0;
+  padding: 0;
+  /*establecer limites de pantalla*/
+
 }
 
-#botones{
-  width:450px;
-	height:1680px;
+#fondo {
+  width: 3000px;
+  height: 1680px;
+  background-repeat: no-repeat;
+  background-image: url("./../media/fondo.png");
+}
+
+#botones {
+  width: 450px;
+  height: 1680px;
   background-color: #a84212;
   display: inline-block;
 }
 
-#btn-up{  
+#btn-up {
   border: none;
-  width:300px;
-	height:600px;
+  width: 300px;
+  height: 600px;
   margin: 60px;
   margin-top: 20%;
   background-position: center;
   background-repeat: no-repeat;
   background-color: #e47658;
-  background-image: url("../img/up.png");
+  background-image: url("./../media/up.png");
 }
 
-#btn-down{  
+#btn-down {
   border: none;
-  width:300px;
-	height:600px;
+  width: 300px;
+  height: 600px;
   margin: 60px;
   margin-top: 20%;
   background-position: center;
   background-repeat: no-repeat;
-  background-image: url("../img/down.png");
+  background-image: url("./../media/down.png");
   background-color: #e47658;
 }
 
-#person{
+#person {
   width: 120px;
   height: 120px;
   transform: rotate(90deg);
-  background-image: url("../img/personaje.png");
+  background-image: url("./../media/personaje.png");
   position: absolute;
   display: inline-block;
   /* animation:mymove 5s infinite;  */
 }
 
-#tuberia{
+#tuberia {
   width: 60px;
   height: 500px;
   margin-left: 1px;
@@ -60,7 +62,8 @@
   position: absolute;
   display: inline;
 }
-#tuberia_abajo{
+
+#tuberia_abajo {
   top: 1280px;
   width: 60px;
   height: 400px;
@@ -68,6 +71,7 @@
   position: absolute;
   display: inline;
 }
+
 /*
 @keyframes mymove {
   from {top: -170px;}
@@ -75,71 +79,74 @@
 }
 */
 
-#colisiones, #score,#puntuacion,#vidas{
+#colisiones,
+#score,
+#puntuacion,
+#vidas {
   display: inline;
   margin-right: 10px;
 }
 
-#vida1{
+#vida1 {
   position: absolute;
   top: 1530px;
   margin-left: 300px;
   float: left;
   width: 150px;
   height: 150px;
-  background-image: url("../img/vidas.png");
+  background-image: url("./../media/vidas.png");
 }
 
-#vida2{
+#vida2 {
   position: absolute;
   top: 1530px;
   float: left;
   margin-left: 150px;
   width: 150px;
   height: 150px;
-  background-image: url("../img/vidas.png");
+  background-image: url("./../media/vidas.png");
 }
 
-#vida3{
+#vida3 {
   position: absolute;
   top: 1530px;
   float: left;
   width: 150px;
   height: 150px;
-  background-image: url("../img/vidas.png");
+  background-image: url("./../media/vidas.png");
 }
 
-#modal{
+#modal {
   position: absolute;
   width: 1100px;
   height: 800px;
   background-color: yellow;
   align-items: center;
-  top:0; 
+  top: 0;
   margin-left: 1200px;
   margin-top: 300px;
-  
+
 }
 
-#titulo{
+#titulo {
   font-size: 120px;
   text-align: center;
   align-items: center;
   font-weight: bold;
 }
 
-#puntosmodal{
+#puntosmodal {
   font-size: 75px;
   text-align: center;
   align-items: center;
 }
 
-#menumodal{
+#menumodal {
   position: absolute;
   bottom: 0;
 }
 
-#buttonmodal{
+#buttonmodal {
   background-color: #4CAF50;
   border: none;
   color: white;
@@ -152,7 +159,7 @@
   cursor: pointer;
 }
 
-#buttoncerrar{
+#buttoncerrar {
   background-color: #4CAF50;
   border: none;
   color: white;
